--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "animate.css": "^4.1.1",
+    "framer-motion": "^11.11.1",
     "next": "14.2.13",
     "preline": "^2.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailgrids": "^2.2.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +27,7 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5"
   }
 }
