--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "framer-motion": "^11.11.1",
     "next": "14.2.13",
     "preline": "^2.5.0",
     "react": "^18",
+    "react-cool-inview": "^3.0.1",
     "react-dom": "^18",
     "tailgrids": "^2.2.7"
   },
