--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "autotyper": "^0.15.1",
     "framer-motion": "^11.11.1",
     "next": "14.2.13",
     "preline": "^2.5.0",
